# UVVM_SoCMake

./: .gitignore  CMakeLists.txt
examples/apb_crc/: CMakeLists.txt  crc_vvc_demo_tb.vhd  crc_vvc_demo_th.vhd
examples/apb_crc/crc/: CMakeLists.txt  crc.vhd  crc_core.vhd  crc_pif.vhd  crc_pif_pkg.vhd  crc_regs.rdl
examples/apb_crc/crc_dpi/: CMakeLists.txt  crc_dpi.cpp
examples/uart/: CMakeLists.txt  uart_vvc_demo_tb.vhd  uart_vvc_demo_th.vhd
